--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "laravel/vonage-notification-channel": "^3.3",
         "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.9"
     },
